fix: format code

--- a/src/assets/scss/vue-flow-handle.scss
+++ b/src/assets/scss/vue-flow-handle.scss
@@ -1,103 +1,303 @@
 .vue-flow__handle {
   // visibility: hidden;
-  &[data-handleid="position-1"] { top: 1%; }
-  &[data-handleid="position-2"] { top: 2%; }
-  &[data-handleid="position-3"] { top: 3%; }
-  &[data-handleid="position-4"] { top: 4%; }
-  &[data-handleid="position-5"] { top: 5%; }
-  &[data-handleid="position-6"] { top: 6%; }
-  &[data-handleid="position-7"] { top: 7%; }
-  &[data-handleid="position-8"] { top: 8%; }
-  &[data-handleid="position-9"] { top: 9%; }
-  &[data-handleid="position-10"] { top: 10%; }
-  &[data-handleid="position-11"] { top: 11%; }
-  &[data-handleid="position-12"] { top: 12%; }
-  &[data-handleid="position-13"] { top: 13%; }
-  &[data-handleid="position-14"] { top: 14%; }
-  &[data-handleid="position-15"] { top: 15%; }
-  &[data-handleid="position-16"] { top: 16%; }
-  &[data-handleid="position-17"] { top: 17%; }
-  &[data-handleid="position-18"] { top: 18%; }
-  &[data-handleid="position-19"] { top: 19%; }
-  &[data-handleid="position-20"] { top: 20%; }
-  &[data-handleid="position-21"] { top: 21%; }
-  &[data-handleid="position-22"] { top: 22%; }
-  &[data-handleid="position-23"] { top: 23%; }
-  &[data-handleid="position-24"] { top: 24%; }
-  &[data-handleid="position-25"] { top: 25%; }
-  &[data-handleid="position-26"] { top: 26%; }
-  &[data-handleid="position-27"] { top: 27%; }
-  &[data-handleid="position-28"] { top: 28%; }
-  &[data-handleid="position-29"] { top: 29%; }
-  &[data-handleid="position-30"] { top: 30%; }
-  &[data-handleid="position-31"] { top: 31%; }
-  &[data-handleid="position-32"] { top: 32%; }
-  &[data-handleid="position-33"] { top: 33%; }
-  &[data-handleid="position-34"] { top: 34%; }
-  &[data-handleid="position-35"] { top: 35%; }
-  &[data-handleid="position-36"] { top: 36%; }
-  &[data-handleid="position-37"] { top: 37%; }
-  &[data-handleid="position-38"] { top: 38%; }
-  &[data-handleid="position-39"] { top: 39%; }
-  &[data-handleid="position-40"] { top: 40%; }
-  &[data-handleid="position-41"] { top: 41%; }
-  &[data-handleid="position-42"] { top: 42%; }
-  &[data-handleid="position-43"] { top: 43%; }
-  &[data-handleid="position-44"] { top: 44%; }
-  &[data-handleid="position-45"] { top: 45%; }
-  &[data-handleid="position-46"] { top: 46%; }
-  &[data-handleid="position-47"] { top: 47%; }
-  &[data-handleid="position-48"] { top: 48%; }
-  &[data-handleid="position-49"] { top: 49%; }
-  &[data-handleid="position-50"] { top: 50%; }
-  &[data-handleid="position-51"] { top: 51%; }
-  &[data-handleid="position-52"] { top: 52%; }
-  &[data-handleid="position-53"] { top: 53%; }
-  &[data-handleid="position-54"] { top: 54%; }
-  &[data-handleid="position-55"] { top: 55%; }
-  &[data-handleid="position-56"] { top: 56%; }
-  &[data-handleid="position-57"] { top: 57%; }
-  &[data-handleid="position-58"] { top: 58%; }
-  &[data-handleid="position-59"] { top: 59%; }
-  &[data-handleid="position-60"] { top: 60%; }
-  &[data-handleid="position-61"] { top: 61%; }
-  &[data-handleid="position-62"] { top: 62%; }
-  &[data-handleid="position-63"] { top: 63%; }
-  &[data-handleid="position-64"] { top: 64%; }
-  &[data-handleid="position-65"] { top: 65%; }
-  &[data-handleid="position-66"] { top: 66%; }
-  &[data-handleid="position-67"] { top: 67%; }
-  &[data-handleid="position-68"] { top: 68%; }
-  &[data-handleid="position-69"] { top: 69%; }
-  &[data-handleid="position-70"] { top: 70%; }
-  &[data-handleid="position-71"] { top: 71%; }
-  &[data-handleid="position-72"] { top: 72%; }
-  &[data-handleid="position-73"] { top: 73%; }
-  &[data-handleid="position-74"] { top: 74%; }
-  &[data-handleid="position-75"] { top: 75%; }
-  &[data-handleid="position-76"] { top: 76%; }
-  &[data-handleid="position-77"] { top: 77%; }
-  &[data-handleid="position-78"] { top: 78%; }
-  &[data-handleid="position-79"] { top: 79%; }
-  &[data-handleid="position-80"] { top: 80%; }
-  &[data-handleid="position-81"] { top: 81%; }
-  &[data-handleid="position-82"] { top: 82%; }
-  &[data-handleid="position-83"] { top: 83%; }
-  &[data-handleid="position-84"] { top: 84%; }
-  &[data-handleid="position-85"] { top: 85%; }
-  &[data-handleid="position-86"] { top: 86%; }
-  &[data-handleid="position-87"] { top: 87%; }
-  &[data-handleid="position-88"] { top: 88%; }
-  &[data-handleid="position-89"] { top: 89%; }
-  &[data-handleid="position-90"] { top: 90%; }
-  &[data-handleid="position-91"] { top: 91%; }
-  &[data-handleid="position-92"] { top: 92%; }
-  &[data-handleid="position-93"] { top: 93%; }
-  &[data-handleid="position-94"] { top: 94%; }
-  &[data-handleid="position-95"] { top: 95%; }
-  &[data-handleid="position-96"] { top: 96%; }
-  &[data-handleid="position-97"] { top: 97%; }
-  &[data-handleid="position-98"] { top: 98%; }
-  &[data-handleid="position-99"] { top: 99%; }
-  &[data-handleid="position-100"] { top: 100%; }
+  &[data-handleid='position-1'] {
+    top: 1%;
+  }
+  &[data-handleid='position-2'] {
+    top: 2%;
+  }
+  &[data-handleid='position-3'] {
+    top: 3%;
+  }
+  &[data-handleid='position-4'] {
+    top: 4%;
+  }
+  &[data-handleid='position-5'] {
+    top: 5%;
+  }
+  &[data-handleid='position-6'] {
+    top: 6%;
+  }
+  &[data-handleid='position-7'] {
+    top: 7%;
+  }
+  &[data-handleid='position-8'] {
+    top: 8%;
+  }
+  &[data-handleid='position-9'] {
+    top: 9%;
+  }
+  &[data-handleid='position-10'] {
+    top: 10%;
+  }
+  &[data-handleid='position-11'] {
+    top: 11%;
+  }
+  &[data-handleid='position-12'] {
+    top: 12%;
+  }
+  &[data-handleid='position-13'] {
+    top: 13%;
+  }
+  &[data-handleid='position-14'] {
+    top: 14%;
+  }
+  &[data-handleid='position-15'] {
+    top: 15%;
+  }
+  &[data-handleid='position-16'] {
+    top: 16%;
+  }
+  &[data-handleid='position-17'] {
+    top: 17%;
+  }
+  &[data-handleid='position-18'] {
+    top: 18%;
+  }
+  &[data-handleid='position-19'] {
+    top: 19%;
+  }
+  &[data-handleid='position-20'] {
+    top: 20%;
+  }
+  &[data-handleid='position-21'] {
+    top: 21%;
+  }
+  &[data-handleid='position-22'] {
+    top: 22%;
+  }
+  &[data-handleid='position-23'] {
+    top: 23%;
+  }
+  &[data-handleid='position-24'] {
+    top: 24%;
+  }
+  &[data-handleid='position-25'] {
+    top: 25%;
+  }
+  &[data-handleid='position-26'] {
+    top: 26%;
+  }
+  &[data-handleid='position-27'] {
+    top: 27%;
+  }
+  &[data-handleid='position-28'] {
+    top: 28%;
+  }
+  &[data-handleid='position-29'] {
+    top: 29%;
+  }
+  &[data-handleid='position-30'] {
+    top: 30%;
+  }
+  &[data-handleid='position-31'] {
+    top: 31%;
+  }
+  &[data-handleid='position-32'] {
+    top: 32%;
+  }
+  &[data-handleid='position-33'] {
+    top: 33%;
+  }
+  &[data-handleid='position-34'] {
+    top: 34%;
+  }
+  &[data-handleid='position-35'] {
+    top: 35%;
+  }
+  &[data-handleid='position-36'] {
+    top: 36%;
+  }
+  &[data-handleid='position-37'] {
+    top: 37%;
+  }
+  &[data-handleid='position-38'] {
+    top: 38%;
+  }
+  &[data-handleid='position-39'] {
+    top: 39%;
+  }
+  &[data-handleid='position-40'] {
+    top: 40%;
+  }
+  &[data-handleid='position-41'] {
+    top: 41%;
+  }
+  &[data-handleid='position-42'] {
+    top: 42%;
+  }
+  &[data-handleid='position-43'] {
+    top: 43%;
+  }
+  &[data-handleid='position-44'] {
+    top: 44%;
+  }
+  &[data-handleid='position-45'] {
+    top: 45%;
+  }
+  &[data-handleid='position-46'] {
+    top: 46%;
+  }
+  &[data-handleid='position-47'] {
+    top: 47%;
+  }
+  &[data-handleid='position-48'] {
+    top: 48%;
+  }
+  &[data-handleid='position-49'] {
+    top: 49%;
+  }
+  &[data-handleid='position-50'] {
+    top: 50%;
+  }
+  &[data-handleid='position-51'] {
+    top: 51%;
+  }
+  &[data-handleid='position-52'] {
+    top: 52%;
+  }
+  &[data-handleid='position-53'] {
+    top: 53%;
+  }
+  &[data-handleid='position-54'] {
+    top: 54%;
+  }
+  &[data-handleid='position-55'] {
+    top: 55%;
+  }
+  &[data-handleid='position-56'] {
+    top: 56%;
+  }
+  &[data-handleid='position-57'] {
+    top: 57%;
+  }
+  &[data-handleid='position-58'] {
+    top: 58%;
+  }
+  &[data-handleid='position-59'] {
+    top: 59%;
+  }
+  &[data-handleid='position-60'] {
+    top: 60%;
+  }
+  &[data-handleid='position-61'] {
+    top: 61%;
+  }
+  &[data-handleid='position-62'] {
+    top: 62%;
+  }
+  &[data-handleid='position-63'] {
+    top: 63%;
+  }
+  &[data-handleid='position-64'] {
+    top: 64%;
+  }
+  &[data-handleid='position-65'] {
+    top: 65%;
+  }
+  &[data-handleid='position-66'] {
+    top: 66%;
+  }
+  &[data-handleid='position-67'] {
+    top: 67%;
+  }
+  &[data-handleid='position-68'] {
+    top: 68%;
+  }
+  &[data-handleid='position-69'] {
+    top: 69%;
+  }
+  &[data-handleid='position-70'] {
+    top: 70%;
+  }
+  &[data-handleid='position-71'] {
+    top: 71%;
+  }
+  &[data-handleid='position-72'] {
+    top: 72%;
+  }
+  &[data-handleid='position-73'] {
+    top: 73%;
+  }
+  &[data-handleid='position-74'] {
+    top: 74%;
+  }
+  &[data-handleid='position-75'] {
+    top: 75%;
+  }
+  &[data-handleid='position-76'] {
+    top: 76%;
+  }
+  &[data-handleid='position-77'] {
+    top: 77%;
+  }
+  &[data-handleid='position-78'] {
+    top: 78%;
+  }
+  &[data-handleid='position-79'] {
+    top: 79%;
+  }
+  &[data-handleid='position-80'] {
+    top: 80%;
+  }
+  &[data-handleid='position-81'] {
+    top: 81%;
+  }
+  &[data-handleid='position-82'] {
+    top: 82%;
+  }
+  &[data-handleid='position-83'] {
+    top: 83%;
+  }
+  &[data-handleid='position-84'] {
+    top: 84%;
+  }
+  &[data-handleid='position-85'] {
+    top: 85%;
+  }
+  &[data-handleid='position-86'] {
+    top: 86%;
+  }
+  &[data-handleid='position-87'] {
+    top: 87%;
+  }
+  &[data-handleid='position-88'] {
+    top: 88%;
+  }
+  &[data-handleid='position-89'] {
+    top: 89%;
+  }
+  &[data-handleid='position-90'] {
+    top: 90%;
+  }
+  &[data-handleid='position-91'] {
+    top: 91%;
+  }
+  &[data-handleid='position-92'] {
+    top: 92%;
+  }
+  &[data-handleid='position-93'] {
+    top: 93%;
+  }
+  &[data-handleid='position-94'] {
+    top: 94%;
+  }
+  &[data-handleid='position-95'] {
+    top: 95%;
+  }
+  &[data-handleid='position-96'] {
+    top: 96%;
+  }
+  &[data-handleid='position-97'] {
+    top: 97%;
+  }
+  &[data-handleid='position-98'] {
+    top: 98%;
+  }
+  &[data-handleid='position-99'] {
+    top: 99%;
+  }
+  &[data-handleid='position-100'] {
+    top: 100%;
+  }
 }
